# setup-rabbitmq-persistent-queue

./: CMakeLists.txt  README.md  amqp-receive.cpp  amqp-send.cpp  main.cpp  setup-rabbitmq-persistent-queue.cpp  setup-rabbitmq-persistent-queue.pro  utility.cpp  utility.h
